# vercel-anti-bot

./: .gitignore  Cargo.toml  README.md
benches/: generate_token.rs
src/: lib.rs  shared_cursor.rs
src/deobfuscate/: computed_member_expr.rs  math_expr.rs  mod.rs  proxy_vars.rs  strings.rs
