[package]
name = "vercel-anti-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
serde = "1.0.167"
serde_json = "1.0.100"
swc = "0.264.13"
swc_core = { version = "0.79.14", features = ["ecma_plugin_transform", "common", "ecma_codegen", "swc_ecma_parser"] }
swc_ecma_parser = "0.137.2"
swc_ecma_transforms = "0.221.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "generate_token"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

